Navbar, hero section
+ Added hero section and positioned logo on the left (not responsive yet)
+ Added navbar

--- a/index.html
+++ b/index.html
@@ -3,21 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
+    <!-- CSS Files -->
     <link rel="stylesheet" href="./dist/css/main.css">
     <title>getTickets - Get concert tickets online</title>
 </head>
 <body>
 
     <nav>
-
+        <div class="container">
+            <h1 class="brand">getTickets</h1>
+            <ul>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">Fesitval</a></li>
+                <li><a href="#">Theater</a></li>
+                <li><a href="#">Sport</a></li>
+            </ul>
+        </div>
     </nav>
 
     <main>
 
+        <section id="hero">
+            <div class="container">
+                <!--<div id="logo">
+                    <img src="./dist/img/oliviaLogo.webp" alt="Olivia Rodrigo Logo">
+                    <a href="#">Get Tickets</a>
+                </div>-->
+            </div>
+        </section>
+
     </main>
 
     <footer>
-        
+
     </footer>
     
 </body>
