--- a/index.html
+++ b/index.html
@@ -13,33 +13,68 @@
 </head>
 <body>
 
-    <nav>
-        <div class="container">
-            <h1 class="brand">getTickets</h1>
-            <ul>
-                <li><a href="#">Music</a></li>
-                <li><a href="#">Fesitval</a></li>
-                <li><a href="#">Theater</a></li>
-                <li><a href="#">Sport</a></li>
-            </ul>
-        </div>
+    <nav class="container">
+        <h1 class="brand">getTickets</h1>
+        <ul>
+            <li><a href="#">Music</a></li>
+            <li><a href="#">Fesitval</a></li>
+            <li><a href="#">Theater</a></li>
+            <li><a href="#">Sport</a></li>
+        </ul>
     </nav>
 
     <main>
 
         <section id="hero">
             <div class="container">
-                <!--<div id="logo">
+                <div class="logo">
                     <img src="./dist/img/oliviaLogo.webp" alt="Olivia Rodrigo Logo">
                     <a href="#">Get Tickets</a>
-                </div>-->
+                </div>
             </div>
+        </section>
+
+        <section id="discover">
+            <h1 class="title">Discover</h1>
+            <section class="discoverList container">
+
+                <div class="artist">
+                    <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
+                    <div class="information">
+                        <h1>Myles Smith</h1>
+                        <p>May 30, Sentrum Scene</p>
+                    </div>
+                </div>
+
+                <div class="artist">
+                    <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
+                    <div class="information">
+                        <h1>Myles Smith</h1>
+                        <p>May 30, Sentrum Scene</p>
+                    </div>
+                </div>
+
+                <div class="artist">
+                    <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
+                    <div class="information">
+                        <h1>Myles Smith</h1>
+                        <p>May 30, Sentrum Scene</p>
+                    </div>
+                </div>
+
+            </section>
         </section>
 
     </main>
 
     <footer>
-
+        <h1 class="brand">getTickets</h1>
+        <h2 class="copyright">Copyright &copy; 2024</h2>
+        <ul>
+            <li><a href="#">Refund</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </footer>
     
 </body>
