Added different artists

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                 </div>
 
                 <div class="artist">
-                    <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
+                    <img src="./dist/img/bensonboone.jpg" alt="Benson Boone">
                     <div class="information">
-                        <h1>Myles Smith</h1>
+                        <h1>Benson Boone</h1>
                         <p>May 30, Sentrum Scene</p>
                     </div>
                 </div>
 
                 <div class="artist">
-                    <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
+                    <img src="./dist/img/hozier.jpg" alt="Hozier">
                     <div class="information">
-                        <h1>Myles Smith</h1>
+                        <h1>Hozier</h1>
                         <p>May 30, Sentrum Scene</p>
                     </div>
                 </div>
