Font & Discover text changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Madimi+One&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- CSS Files -->
     <link rel="stylesheet" href="./dist/css/main.css">
     <title>getTickets - Get concert tickets online</title>
@@ -35,7 +35,7 @@
         </section>
 
         <section id="discover">
-            <h1 class="title">Discover</h1>
+            <h1 class="title">Discover Concerts</h1>
             <section class="discoverList container">
 
                 <div class="artist">
