Switched to css grids for discover section
+ Added 3 more artists
~ Switched to css grids

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
         <section id="discover">
             <h1 class="title">Discover Concerts</h1>
-            <section class="discoverList container">
+            <section class="discoverList grid-container">
 
                 <div class="artist">
                     <img src="./dist/img/mylessmith.jpg" alt="Myles Smith">
                     <div class="information">
                         <h1>Myles Smith</h1>
-                        <p>May 30, Sentrum Scene</p>
+                        <p>January 10, Sentrum Scene</p>
                     </div>
                 </div>
 
@@ -50,7 +50,7 @@
                     <img src="./dist/img/bensonboone.jpg" alt="Benson Boone">
                     <div class="information">
                         <h1>Benson Boone</h1>
-                        <p>May 30, Sentrum Scene</p>
+                        <p>March 4, Telenor Arena</p>
                     </div>
                 </div>
 
@@ -58,7 +58,31 @@
                     <img src="./dist/img/hozier.jpg" alt="Hozier">
                     <div class="information">
                         <h1>Hozier</h1>
-                        <p>May 30, Sentrum Scene</p>
+                        <p>May 17, Oslo Spektrum</p>
+                    </div>
+                </div>
+
+                <div class="artist">
+                    <img src="./dist/img/alexwarren.jpeg" alt="Alex Warren">
+                    <div class="information">
+                        <h1>Alex Warren</h1>
+                        <p>June 26, Sentrum Scene</p>
+                    </div>
+                </div>
+
+                <div class="artist">
+                    <img src="./dist/img/danielseavey.webp" alt="Daniel Seavey">
+                    <div class="information">
+                        <h1>Daniel Seavey</h1>
+                        <p>July 10, Sentrum Scene</p>
+                    </div>
+                </div>
+
+                <div class="artist">
+                    <img src="./dist/img/matthansen.jpg" alt="Matt Hansen">
+                    <div class="information">
+                        <h1>Matt Hansen</h1>
+                        <p>September 24, Vulkan Arena</p>
                     </div>
                 </div>
 
