--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/5fe8aa1feb.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&family=Madimi+One&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!-- CSS Files -->
     <link rel="stylesheet" href="./dist/css/main.css">
+    <!-- Theme -->
+    <link rel="stylesheet" href="./dist/css/themes/light.css" id="themeStyle">
+    <!-- JavaScript -->
+    <script src="./dist/js/themeManager.js"></script>
+
     <title>getTickets - Get concert tickets online</title>
 </head>
 <body>
@@ -20,6 +29,7 @@
             <li><a href="#">Fesitval</a></li>
             <li><a href="#">Theater</a></li>
             <li><a href="#">Sport</a></li>
+            <li><a href="#"><i class="fa-solid fa-brush" onclick="switchTheme()"></i></a></li>
         </ul>
     </nav>
 
@@ -63,10 +73,10 @@
                 </a>
 
                 <a href="#"  class="artist">
-                    <img src="./dist/img/alexwarren.jpeg" alt="Alex Warren">
+                    <img src="./dist/img/alexWarren2.jpg" alt="Alex Warren">
                     <div class="information">
                         <h1>Alex Warren</h1>
-                        <p>June 26, Sentrum Scene</p>
+                        <p>March 11, Dead Poets</p>
                     </div>
                 </a>
 
