Scroll to top, nav changes, smooth scroll
+ Added a scroll to top button that will appear when you scroll past hero section
+ Added smooth scrolling so it doesn't snap to top when clicking scroll to top
+ Added possibility for navbar to follow page (Unused for now)
~ Changed nav menu to display horizontally instead of vertically

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- JavaScript -->
     <script src="./dist/js/themeManager.js"></script>
     <script type="module" src="./dist/js/menu.js" defer></script>
+    <!--<script src="./dist/js/navbarScroll.js" defer></script>-->
+    <script src="./dist/js/scrollToTop.js" defer></script>
 
     <title>getTickets - Get concert tickets online</title>
 </head>
@@ -115,6 +117,10 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </footer>
+
+    <div id="scrollToTop">
+        <i class="fa-solid fa-circle-up" aria-hidden="true"></i>
+    </div>
     
 </body>
 </html>
